fullSandbox11072023/force-app/main/default/objects/Request_Demo_Unit__c/Request_Demo_Unit__c.object-meta.xml
<CustomObject>
    <description>Records of Approved Reps</description>
    <label>Request Demo Unit</label>
    <nameField>
        <label>Rep Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Demo Units</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>