fullSandbox11072023/force-app/main/default/objects/Request_Demo_Unit__c/fields/Agree__c.field-meta.xml
<CustomField>
    <fullName>Agree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I have read and agree</label>
    <type>Checkbox</type>
</CustomField>