fullSandbox11072023/force-app/main/default/objects/Request_Demo_Unit__c/fields/Choose_Unit__c.field-meta.xml
<CustomField>
    <fullName>Choose_Unit__c</fullName>
    <label>Choose Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G4</fullName>
            </value>
            <value>
                <fullName>Rhythm</fullName>
            </value>
            <value>
                <fullName>G4 &amp; Rhythm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>