fullSandbox11072023/force-app/main/default/objects/Request_Demo_Unit__c/fields/Trainings__c.field-meta.xml
<CustomField>
    <fullName>Trainings__c</fullName>
    <description>Grans user permission to request a demo unit.</description>
    <inlineHelpText>Completed Product Training - Permission to get a demo unit
Completed Bedside Proctor Training - Can support a case on their own.</inlineHelpText>
    <label>Trainings</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VPS Expert Trainer</fullName>
            </value>
            <value>
                <fullName>VPS G4 Product Training</fullName>
            </value>
            <value>
                <fullName>VPS G4 Bedside Proctoring</fullName>
            </value>
            <value>
                <fullName>VPS Rhythm Product Training</fullName>
            </value>
            <value>
                <fullName>VPS Rhythm Bedside Proctoring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>