fullSandbox11072023/force-app/main/default/objects/Request_Demo_Unit__c/validationRules/Must_select_a_training.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_select_a_training</fullName>
    <active>true</active>
    <description>Only trained reps can be setup.</description>
    <errorConditionFormula>ISBLANK( Trainings__c )</errorConditionFormula>
    <errorDisplayField>Trainings__c</errorDisplayField>
    <errorMessage>Please select a training.</errorMessage>
</ValidationRule>