fullSandbox11072023/force-app/main/default/objects/Request_Demo_Unit__c/listViews/All_Active_Reps.listView-meta.xml
<ListView>
    <fullName>All_Active_Reps</fullName>
    <columns>NAME</columns>
    <columns>Agree__c</columns>
    <columns>Status__c</columns>
    <columns>Trainings__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Rep_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All (Active Reps)</label>
    <language>en_US</language>
</ListView>