fullSandbox11072023/force-app/main/default/objects/Request_Demo_Unit__c/listViews/Approved_but_not_accepted.listView-meta.xml
<ListView>
    <fullName>Approved_but_not_accepted</fullName>
    <columns>NAME</columns>
    <columns>Trainings__c</columns>
    <columns>Agree__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Agree__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Trainings__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Rep_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Approved but not accepted</label>
    <language>en_US</language>
</ListView>